# hindenburgresearch

./: README.md  backtest.py  poc.py  pyproject.toml
quotes/: EBIXQ.csv  EH.csv  EQIX.csv  ESTA.csv  FRHC.csv  IEP.csv  LFST.csv  LPP.WA.csv  RENB.csv  SQ.csv  TEMN.SW.csv  TIO.csv  WELL.csv
tests/: test_get_posts.py
