[tool.poetry]
name = "hindenburgresearch"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]
license = "http://www.apache.org/licenses/LICENSE-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
feedparser = "^6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
